<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 <modelVersion>4.0.0</modelVersion>
 <parent>
  <groupId>org.springframework.boot</groupId>
  <artifactId>spring-boot-starter-parent</artifactId>
  <version>4.1.0</version>
  <relativePath/>
 </parent>
 <groupId>com.carebridge</groupId>
 <artifactId>backend</artifactId>
 <version>0.0.1-SNAPSHOT</version>
 <name/>
 <description/>
 <url/>
 <licenses>
 <license/>
 </licenses>
 <developers>
 <developer/>
 </developers>
 <scm>
 <connection/>
 <developerConnection/>
 <tag/>
 <url/>
 </scm>
 <properties>
 <java.version>21</java.version>
 <postgresql.version>42.7.12</postgresql.version>
 </properties>
 <dependencies>
 <dependency>
  <groupId>org.springframework.boot</groupId>
  <artifactId>spring-boot-starter-data-jpa</artifactId>
 </dependency>
 <dependency>
  <groupId>org.springframework.boot</groupId>
  <artifactId>spring-boot-starter-security</artifactId>
 </dependency>
 <dependency>
  <groupId>org.springframework.boot</groupId>
  <artifactId>spring-boot-starter-validation</artifactId>
 </dependency>
 <dependency>
  <groupId>org.springframework.boot</groupId>
  <artifactId>spring-boot-starter-json</artifactId>
 </dependency>
 <dependency>
  <groupId>org.springframework.boot</groupId>
  <artifactId>spring-boot-starter-webmvc</artifactId>
 </dependency>
 <dependency>
  <groupId>org.springframework.boot</groupId>
  <artifactId>spring-boot-starter-flyway</artifactId>
 </dependency>
 <dependency>
  <groupId>org.springframework.boot</groupId>
  <artifactId>spring-boot-starter-mail</artifactId>
 </dependency>
 <dependency>
  <groupId>org.flywaydb</groupId>
  <artifactId>flyway-database-postgresql</artifactId>
 </dependency>

 <dependency>
  <groupId>org.springframework.boot</groupId>
  <artifactId>spring-boot-devtools</artifactId>
  <scope>runtime</scope>
  <optional>true</optional>
 </dependency>
 <dependency>
  <groupId>org.springframework.boot</groupId>
  <artifactId>spring-boot-docker-compose</artifactId>
  <scope>runtime</scope>
  <optional>true</optional>
 </dependency>
 <dependency>
  <groupId>org.postgresql</groupId>
  <artifactId>postgresql</artifactId>
  <scope>runtime</scope>
 </dependency>
 <dependency>
  <groupId>com.google.firebase</groupId>
  <artifactId>firebase-admin</artifactId>
  <version>9.5.0</version>
 </dependency>
 <dependency>
  <groupId>org.projectlombok</groupId>
  <artifactId>lombok</artifactId>
  <optional>true</optional>
 </dependency>
 <!-- MapStruct for DTO mapping -->
 <dependency>
  <groupId>org.mapstruct</groupId>
  <artifactId>mapstruct</artifactId>
  <version>1.6.3</version>
 </dependency>
 <dependency>
  <groupId>org.mapstruct</groupId>
  <artifactId>mapstruct-processor</artifactId>
  <version>1.6.3</version>
  <scope>provided</scope>
 </dependency>
 <!-- Cloudinary for file uploads -->
 <dependency>
  <groupId>com.cloudinary</groupId>
  <artifactId>cloudinary-http5</artifactId>
  <version>2.3.0</version>
 </dependency>
 <!-- Cloudflare R2 uses the S3-compatible API. -->
 <dependency>
  <groupId>software.amazon.awssdk</groupId>
  <artifactId>s3</artifactId>
  <version>2.31.54</version>
 </dependency>
 <!-- Metadata extractor for EXIF orientation handling -->
 <dependency>
  <groupId>com.drewnoakes</groupId>
  <artifactId>metadata-extractor</artifactId>
  <version>2.18.0</version>
 </dependency>
 <!-- HTML sanitization for rich text content (ContentRichTextEditor_TDS ADR-RTE-005) -->
 <dependency>
  <groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
  <artifactId>owasp-java-html-sanitizer</artifactId>
  <version>20260101.1</version>
 </dependency>
 <dependency>
  <groupId>org.springframework.boot</groupId>
  <artifactId>spring-boot-starter-test</artifactId>
  <scope>test</scope>
 </dependency>
 <dependency>
  <groupId>org.springframework.boot</groupId>
  <artifactId>spring-boot-test-autoconfigure</artifactId>
  <scope>test</scope>
 </dependency>
 <dependency>
  <groupId>org.springframework.boot</groupId>
  <artifactId>spring-boot-webmvc-test</artifactId>
  <scope>test</scope>
 </dependency>
 <dependency>
  <groupId>org.springframework.security</groupId>
  <artifactId>spring-security-test</artifactId>
  <scope>test</scope>
 </dependency>
 <dependency>
  <groupId>com.h2database</groupId>
  <artifactId>h2</artifactId>
  <scope>test</scope>
 </dependency>
 <!-- Testcontainers: real PostgreSQL integration tests (versions managed by Spring Boot BOM) -->
 <dependency>
  <groupId>org.springframework.boot</groupId>
  <artifactId>spring-boot-testcontainers</artifactId>
  <scope>test</scope>
 </dependency>
 <dependency>
  <groupId>org.testcontainers</groupId>
  <artifactId>testcontainers-junit-jupiter</artifactId>
  <scope>test</scope>
 </dependency>
 <dependency>
  <groupId>org.testcontainers</groupId>
  <artifactId>testcontainers-postgresql</artifactId>
  <scope>test</scope>
 </dependency>
 <dependency>
  <groupId>org.springdoc</groupId>
  <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
  <version>3.0.3</version>
 </dependency>
 </dependencies>

 <build>
 <plugins>
 <plugin>
  <groupId>org.springframework.boot</groupId>
  <artifactId>spring-boot-maven-plugin</artifactId>
  <configuration>
  <excludes>
   <exclude>
    <groupId>org.projectlombok</groupId>
    <artifactId>lombok</artifactId>
   </exclude>
  </excludes>
  </configuration>
 </plugin>
 <plugin>
  <groupId>org.apache.maven.plugins</groupId>
  <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
  <executions>
  <execution>
   <id>default-compile</id>
   <phase>compile</phase>
   <goals>
   <goal>compile</goal>
   </goals>
   <configuration>
   <annotationProcessorPaths>
    <path>
     <groupId>org.projectlombok</groupId>
     <artifactId>lombok</artifactId>
    </path>
    <path>
     <groupId>org.mapstruct</groupId>
     <artifactId>mapstruct-processor</artifactId>
     <version>1.6.3</version>
    </path>
   </annotationProcessorPaths>
   </configuration>
  </execution>
  <execution>
   <id>default-testCompile</id>
   <phase>test-compile</phase>
   <goals>
   <goal>testCompile</goal>
   </goals>
   <configuration>
   <annotationProcessorPaths>
    <path>
     <groupId>org.projectlombok</groupId>
     <artifactId>lombok</artifactId>
    </path>
    <path>
     <groupId>org.mapstruct</groupId>
     <artifactId>mapstruct-processor</artifactId>
     <version>1.6.3</version>
    </path>
   </annotationProcessorPaths>
   </configuration>
  </execution>
 </executions>
 </plugin>
 </plugins>
 </build>

</project>
